# NyarchScriptsQT

./: .gitignore  MANIFEST.in  README.md  install.sh  moe.nyarchlinux.scriptsqt.desktop  moe.nyarchlinux.scriptsqt.json  moe.nyarchlinux.scriptsqt.metainfo.xml  pyproject.toml
src/nyarchscriptqt/: __init__.py  __main__.py  app.py  scripts_model.py
src/nyarchscriptqt/qml/: ScriptPage.qml  main.qml
